test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_assign_to_array.draco
proc main() void : a[1] := 1; corp;

