test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_case_as_identifier.draco
int case;
 
proc main() void : a := 1; corp;
